--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -1,16 +1,12 @@
-
-
-
-
 <section class="manage">
-  <app-manage-choose (list)="getManageTerms($event)"/>
+  <app-manage-choose (list)="getManageTerms($event)" />
   <div class="container my-4">
-    @if(currentTerms){
-      @for(term of currentTerms; track term.id){
-      <p>{{term.fr}}</p>
+    @if(listService.currentTerms()){
+      @for(term of listService.currentTerms(); track term.id){
+        <app-item-container [stripe]="$index">
+          <app-manage-item [term]="term" />
+        </app-item-container>
       }
     }
-
   </div>
- 
-  </section>
+</section>
