--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -1,3 +1,4 @@
+<dialog app-manage-modal></dialog>
 <section class="manage">
   <app-manage-choose (list)="getManageTerms($event)" />
   <div class="container my-4">
