--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,6 @@ body {
 .t_form-control {
   display: block;
   flex: 1;
-  /* width: 100%; */
   padding: .375rem .75rem;
   font-size: 1rem;
   font-weight: 400;
@@ -38,8 +37,27 @@ body {
   border-radius: var(--bs-border-radius);
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+/* Validation */
+input:read-only,
+input:disabled,
+textarea:read-only,
+textarea:disabled{
+  background-color: transparent;
+  border:none;
+}
+input.ng-dirty.ng-invalid,
+textarea.ng-dirty.ng-invalid
+{
+  background-color: var(--bs-red);
+}
 
-/* BUTTONS */
+/* Buttons */
+
+/* DIALOG */
+dialog::backdrop{
+  background:rgba(var(--bs-secondary-rgb), 0.75);
+  
+}
 
 /* COMPONENTS */
 .t_flex-items{
