--- a/src/app/manage/manage-choose/manage-choose.component.html
+++ b/src/app/manage/manage-choose/manage-choose.component.html
@@ -15,7 +15,7 @@
     </form>
     </div>
     <div>
-      <button type="button" class="btn btn-warning">Add Translation</button>
+      <button type="button" class="btn btn-warning" (click)="openManageModal()">Add Translation</button>
     </div>
   </div>
 </section>
