--- a/src/app/manage/manage-item/manage-item.component.html
+++ b/src/app/manage/manage-item/manage-item.component.html
@@ -1,14 +1,63 @@
-<form [formGroup]="form" class="t_flex-items">
-  <input type="text" class="t_form-control" id="nl" name="nl" [formControl]="form.controls.nl">
-  <input type="text"  class="t_form-control" id="fr" name="fr" [formControl]="form.controls.fr" >
-  @if(term.perfectum){
-  <input type="text" [value]="term.perfectum" class="t_form-control" id="perfectum" name="perfectum"
-    [formControl]="form.controls.perfectum">
+<form class="t_flex-items">
+  @if(listService.currentType() === "zin"){
+    <textarea 
+    class="t_form-control" 
+    type="text" 
+    class="t_form-control"
+    required
+    id="nl" name="nl" 
+    [(ngModel)]="term.nl" 
+    [readonly]="isEdit?false:true"
+    type="text"
+   ></textarea>
+  <textarea
+  class="t_form-control"
+  required
+  id="fr"
+  name="fr"
+  [(ngModel)]="term.fr"
+  [readonly]="isEdit?false:true"
+   ></textarea>
+  
   }
-  @if(term.imperfectum){
-  <input type="text" [value]="term.imperfectum" class="t_form-control" id="imperfectum" name="imperfectum"
-    [formControl]="form.controls.imperfectum">
+  @else {
+    <input 
+    type="text"
+    class="t_form-control"
+    required
+    id="nl" name="nl" 
+    [(ngModel)]="term.nl" 
+    [readonly]="isEdit?false:true"
+     >
+    <input
+    type="text"
+    class="t_form-control"
+    required
+    id="fr"
+    name="fr"
+    [(ngModel)]="term.fr"
+    [readonly]="isEdit?false:true"
+     >
+     @if(listService.currentType() === "verb"){
+      <input 
+    type="text"
+    class="t_form-control"
+    required
+    id="perfectum" name="perfectum" 
+    [(ngModel)]="term.perfectum" 
+    [readonly]="isEdit?false:true"
+     >
+    <input
+    type="text"
+    class="t_form-control"
+    required
+    id="imperfectum"
+    name="imperfectum"
+    [(ngModel)]="term.imperfectum"
+    [readonly]="isEdit?false:true"
+     >
+     }
   }
-  <button class="btn btn-light" (click)="onEdit()" [type]="isEdit? 'submit': 'button'" >{{isEdit? "save" : "edit"}}</button>
-  <button class="btn btn-danger" (click)="onDelete()" >delete </button>
+  <button class="btn" [class]="isEdit? 'btn-warning' : 'btn-light'" (click)="onEdit()" [type]="isEdit? 'submit': 'button'" >{{isEdit? "save" : "edit"}}</button>
+  <button class="btn btn-danger" (click)="onDelete()" ><i class="bi bi-trash3-fill"></i></button>
 </form>
