--- a/src/app/loggin/loggin.component.html
+++ b/src/app/loggin/loggin.component.html
@@ -1,99 +1,25 @@
 <div class="container my-5">
-
-  
-    @if(currentForm == 'registration'){
-    <!-- Registration -->
-    <section class="loggin">
-    <div class="text-center mb-2">
-      <h3>Registration</h3>
-      <p>
-        <small>I remember my account !
-          <a class="text-danger" data-target="loggin" href="loggin" (click)="toggleForms($event)">
-            Go to sign in</a>.
-        </small>
-      </p>
-    </div>
-    <form [formGroup]="registerForm" class="loggin__form" (ngSubmit)="registration(registerForm)">
-      <p class="small-comment">
-        <small>All fields are required.</small>
-      </p>
-      <label for="name">Name</label>
-      <input 
-        type="text"
-        id="name"
-        name="name"
-        required
-        class="t_form-control mb-2"
-        formControlName="name"
-      >
-      <p class="small-comment">
-        <small>Please, No accented or special characters.</small>
-      </p>
-      
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        name="email"
-        required
-        class="t_form-control mb-2"
-        formControlName="email"
-      >
-      <app-pwd [props] = "{
-        id:'pwd1',
-        label:'Password',
-        parent :registerForm,
-        validation:true }"
-       />
-      <p class="small-comment">
-        <small>
-          The password must have min 8 characters: Uppercase(s), lowercase(s) and
-          number(s)
-        </small>
-      </p>
-      <app-pwd [props] = "{
-        id:'pwd2',
-        label:'Confirm Password',
-        parent :registerForm,
-        validation:false }"
-       />
-      <button class="btn btn-outline-secondary mt-4" [disabled]="registerForm.invalid" type="submit">Go!</button>
-    </form>
-    </section>
-    }
-    @if(currentForm == 'loggin'){
-    <!-- Loggin -->
-     <section class="loggin">
+  <!-- Loggin -->
+  <section class="loggin">
     <div class="text-center mb-2">
       <h3>Sign in to your account</h3>
       <p>
         <small>Don't have an account?
-          <a class="text-danger" data-target="registration" href="registration" (click)="toggleForms($event)">Create
+          <a class="text-danger" href="registration">Create
             one</a>.
         </small>
       </p>
     </div>
     <form [formGroup]="logginForm" class="loggin__form" (ngSubmit)="loggin(logginForm)">
       <label for="log_email">Email</label>
-      <input
-        type="email"
-        name="log_email"
-        id="log_email"
-        class="t_form-control mb-2"
-        required
-        formControlName="log_email"
-      >
-      <app-pwd  [props] = "{
+      <input type="email" name="log_email" id="log_email" class="t_form-control mb-2" required
+        formControlName="log_email">
+      <app-pwd [props]="{
         id:'log_pwd',
         label:'Password',
         parent :logginForm,
-        validation:false}"
-       />
+        validation:false}" />
       <button class="btn btn-outline-secondary mt-4" [disabled]="logginForm.invalid" type="submit">Go!</button>
     </form>
   </section>
-    }
- 
-
-
 </div>
